# well-tamed-delivery-man

./: main.py  pyproject.toml  setup.py
config/: default.yml
outputs/: execution_results_20250609_230417.json  execution_results_20250610_003751.json
src/: cli.py  core.py  models.py
src/executors/: arxiv.py  chatGPT.py  genspark.py  reddit.py  twitter.py
